<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">mome</string>
    <string name="ExitHint">再按一次退出应用</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="fans">粉丝</string>
    <string name="attention">关注</string>
    <string name="seenFilmNum">观影总数</string>
    <string name="filmStyle">喜欢类型</string>
    <string name="TAfilm">TA的影院</string>
    <string name="TAPhotos">TA的相册</string>
    <string name="TAcollection">TA的收藏</string>
    <string name="TAattention">TA关注的人</string>
    <string name="UpdateIcon">修改头像</string>
    <string name="UserName">用户名</string>
    <string name="UserSex">性别</string>
    <string name="UserSign">个人签名</string>
    <string name="UserAddress">所在地</string>
    <string name="Userbirthday">生日</string>
    <string name="movieIntroduce">影片简介</string>
    <string name="add_look_record">添加观影纪录</string>
    <string name="get_look_record">查看观影纪录</string>
    <string name="get_looked_friends">观看过的好友</string>
    <string name="collect_num">收藏此片的人</string>
    <string name="commend_to_friends">推荐给好友</string>
    <string name="order_by_new">按最新排序</string>
    <string name="order_by_hot">按热度排序</string>
    <string name="commetn_edit_hint">输入评论内容</string>
    <string name="all">全部</string>
    <string name="year">年份筛选</string>
    <string name="film">影院</string>
     <string name="internet">网络</string>
      <string name="TV">电视</string>
       <string name="emptyhint">暂无数据</string>
       
       <string name="record_looked_date">观影日期</string>
       <string name="record_looked_time">观影时间</string>
        <string name="record_looked_type">观影平台</string>
       <string name="record_ciname_name">影院名称</string>
       <string name="record_ciname_name_hint">选择影院</string>
       <string name="record_ciname_no">影厅号码</string>
       <string name="record_seat_no">座位牌号</string>
       <string name="record_ticket_monery">票价</string>
       
       <string name="record_looked_date_hint">选择观影日期</string>
       <string name="record_looked_time_hint">选择观影时间</string>
       <string name="record_looked_type_hint">选择观影平台</string>
       <string name="record_ciname_no_hint">如：1</string>
       <string name="record_seat_no_hint">如：1排1座</string>
        <string name="record_ticket_monery_hint">如：1</string>
        
        <!--邀请好友信息  -->
        
                <string name="inviteMessage">发现了一款好玩的应用。mome帮助您保存最美的记忆</string>
        
</resources>