<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <com.mome.main.business.HeadRef
        xmlns:head="http://schemas.android.com/apk/res/com.mome.main"
        android:id="@+id/head_layout"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        head:leftBtnShow="show"
        head:leftButton="img"
        head:leftImg="@drawable/headview_btn_back"
        head:titleShow="show"
        head:titleText="个人主页" >
    </com.mome.main.business.HeadRef>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/common_marginOrpadding" >

        <ImageView
            android:id="@+id/user_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_marginOrpadding"
            android:layout_weight="1"
            android:text="古天乐"
            android:textColor="@color/black"
            android:textSize="@dimen/common_middle_textSize" />

        <RelativeLayout
            android:id="@+id/attentionLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8" >

            <TextView
                android:id="@+id/attentionNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:singleLine="true"
                android:text="205"
                android:textColor="@color/black"
                android:textSize="@dimen/common_textSize" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/attention"
                android:textColor="@color/gray"
                android:textSize="@dimen/common_textSize" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/fansLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8" >

            <TextView
                android:id="@+id/fansNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:singleLine="true"
                android:text="2054"
                android:textColor="@color/black"
                android:textSize="@dimen/common_textSize" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/fans"
                android:textColor="@color/gray"
                android:textSize="@dimen/common_textSize" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:padding="@dimen/common_marginOrpadding">

        <TextView
            android:id="@+id/signature_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="他比较懒，什么都没留下"
            android:textColor="@color/gray"
            android:textSize="@dimen/common_textSize" />
        
        <ImageButton 
            android:id="@+id/userSet"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/userhome_btn_set"
            android:layout_alignParentRight="true"
            />
    </RelativeLayout>
    <View style="@style/line_horizontal"/>
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/common_marginOrpadding" >
        
         <RelativeLayout
            android:id="@+id/seenFilmLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/seenFilmNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:singleLine="true"
                android:text="205"
                android:textColor="@color/black"
                android:textSize="@dimen/common_textSize" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/seenFilmNum"
                android:textColor="@color/gray"
                android:layout_below="@+id/seenFilmNum"
                android:textSize="@dimen/common_textSize" />
        </RelativeLayout>
         <TextView style="@style/line_vercal"
            />
        <RelativeLayout
            android:id="@+id/filmStyleLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/filmStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:singleLine="true"
                android:text="2054"
                android:textColor="@color/black"
                android:textSize="@dimen/common_textSize" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/filmStyle"
                android:textColor="@color/gray"
                android:layout_below="@+id/filmStyle"
                android:textSize="@dimen/common_textSize" />
        </RelativeLayout>
    </LinearLayout>
    
     <com.mome.main.business.widget.pulltorefresh.PullToRefreshListView 
         android:id="@+id/friendsDynamicList"
         style="@style/listView"         
         ></com.mome.main.business.widget.pulltorefresh.PullToRefreshListView>

</LinearLayout>